[package]
name = "rlog"
version = "0.2.2"
edition = "2024"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["rlib"]
bench = false
test = false

[dependencies]
anyhow = "1.0.0"
chrono = "0.4.0"
flate2 = "1.0"
log = "*"
log4rs = "1.4.0"
parking_lot = "0.12.0"
zstd = "0.13"
log-panics = { version = "*", features = ["with-backtrace"]}
